Bug 482107 - Open Terminal here fails to open Konsole
Summary: Open Terminal here fails to open Konsole
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.02.0
Platform: Other Linux
: HI normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: qt6
: 480697 482215 482571 482680 483031 483251 483440 483528 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-03-01 01:49 UTC by lookatmytruckerhat
Modified: 2024-04-21 05:00 UTC (History)
19 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: Frameworks 6.1
Sentry Crash Report:


Attachments
video of bug (1.58 MB, video/mp4)
2024-03-07 17:44 UTC, jestarray
Details

Note You need to log in before you can comment on or make changes to this bug.
Description lookatmytruckerhat 2024-03-01 01:49:53 UTC
SUMMARY
Konsole does not open in the current directory from within Dolphin.


STEPS TO REPRODUCE
1. Right-click inside Dolphin window.
2. Select Open Terminal Here
3. Konsole icon appears on Panel like it's going to open, but then disappears.

OBSERVED RESULT
Konsole does not open.

EXPECTED RESULT
Konsole is supposed to open to the current directory.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: KDE Neon 6
(available in About System)
KDE Plasma Version: 6.0.0
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2024-03-01 06:53:44 UTC
That means it's failing to launch. Does Konsole open normally, or does it fail to launch there too?
Comment 2 mashkal2000@gmail.com 2024-03-01 06:59:05 UTC
I have the same issue. Konsole opens normally in that directory. The F4 terminal also opens fine. When clicking open terminal here (or using the keyboard shortcut), if no konsole window is already open, the konsole icons briefly appears in the taskbar with the loading symbol but then it disappears before opening a window. When there is already a konsole window open (with any directory as the CWD), clicking the 'open terminal here' button or pressing the keyboard shortcut does nothing.
Comment 3 docate7577 2024-03-01 09:28:00 UTC
When launching dolphin from konsole then pressing "Open terminal here" menu. I am getting this 

Detected locale "C" with character encoding "ANSI_X3.4-1968", which is not UTF-8.
Qt depends on a UTF-8 locale, and has switched to "C.UTF-8" instead.
If this causes problems, reconfigure your locale. See the locale(1) manual
for more information.
qt.qpa.xcb: could not connect to display 
qt.qpa.plugin: From 6.5.0, xcb-cursor0 or libxcb-cursor0 is needed to load the Qt xcb platform plugin.
qt.qpa.plugin: Could not load the Qt platform plugin "xcb" in "" even though it was found.
This application failed to start because no Qt platform plugin could be initialized. Reinstalling the application may fix this problem.
Comment 4 Bug Janitor Service 2024-03-01 21:19:54 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/1566
Comment 5 Paul L. 2024-03-02 04:54:22 UTC
Affected by this also.

KDE neon User Edition
KDE Plasma Version: 6.0.0
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2

From within Dolphin, Open Terminal, Open Terminal Here, Focus Terminal Panel work.
Comment 6 Nicolas Fella 2024-03-05 16:23:07 UTC
Git commit 6e7775d315f389df0a440ed62b842ce83dc9a27e by Nicolas Fella.
Committed on 05/03/2024 at 16:22.
Pushed by nicolasfella into branch 'master'.

[kterminallauncherjob] Inherit default process environment from parent

Before Qt 6.3, an empty (default constructed) QProcessEnvironment caused
QProcess to incorrectly inherit the environment variables from the parent
process. This was fixed in qtbase 5fc9c02a695.

CommandLauncherJob was adjusted for this in 916984940f64e07db9b4d152be9f2a87dda0cfb4,
however here we are overriding its default env with our own default-constructed one

M  +1    -1    src/gui/kterminallauncherjob.cpp

https://invent.kde.org/frameworks/kio/-/commit/6e7775d315f389df0a440ed62b842ce83dc9a27e
Comment 7 Nicolas Fella 2024-03-07 10:13:47 UTC
*** Bug 482680 has been marked as a duplicate of this bug. ***
Comment 8 Nicolas Fella 2024-03-07 11:26:57 UTC
*** Bug 482215 has been marked as a duplicate of this bug. ***
Comment 9 jestarray 2024-03-07 17:44:05 UTC
Created attachment 166620 [details]
video of bug
Comment 10 jestarray 2024-03-07 17:45:02 UTC
I have a similar issue where it will not open with alacritty terminal but it works on konsole and urxvt
Comment 11 Nicolas Fella 2024-03-07 18:45:00 UTC
*** Bug 480697 has been marked as a duplicate of this bug. ***
Comment 12 krzmbrzl 2024-03-09 09:55:57 UTC
I am still affected by this - given this is marked as fixed, I assume it should have been resolved by an update by now but at least for me it hasn't
Comment 13 Antonio Rojas 2024-03-09 10:07:11 UTC
(In reply to krzmbrzl from comment #12)
> I am still affected by this - given this is marked as fixed, I assume it
> should have been resolved by an update by now but at least for me it hasn't

The fix is in Frameworks 6.1, which is still a few weeks ahead.
Comment 14 Patrick Silva 2024-03-09 21:10:25 UTC
*** Bug 483031 has been marked as a duplicate of this bug. ***
Comment 15 Nicolas Fella 2024-03-11 18:56:23 UTC
*** Bug 483251 has been marked as a duplicate of this bug. ***
Comment 16 Antonio Rojas 2024-03-13 14:24:31 UTC
*** Bug 483440 has been marked as a duplicate of this bug. ***
Comment 17 Antonio Rojas 2024-03-14 09:49:05 UTC
*** Bug 483528 has been marked as a duplicate of this bug. ***
Comment 18 Méven Car 2024-03-30 12:58:54 UTC
*** Bug 482571 has been marked as a duplicate of this bug. ***
Comment 19 Paul L. 2024-04-10 13:22:45 UTC
May well be fixed in Frameworks 6.1, but it is also fixed (at least for me) in my KDE neon User Edition which is running Frameworks 5.112.0. I can't say when it started working again, but obviously some update brought the fix in.
Comment 20 jestarray 2024-04-21 05:00:28 UTC
(In reply to Paul L. from comment #19)
> May well be fixed in Frameworks 6.1, but it is also fixed (at least for me)
> in my KDE neon User Edition which is running Frameworks 5.112.0. I can't say
> when it started working again, but obviously some update brought the fix in.

It is not fixed for me, my KDE frameworks version is 6.1! I can't open terminal let alone GUI apps won't pop up. I am using i3wm on x11, and on wayland I use sway. It works fine on wayland though I recall